# agno-agent-os-with-ui

./: .env.example  .gitignore  AGENTS.grounding.md  AGENTS.md  AUTO_RECONNECTION_GUIDE.md  DOCKER_INTEGRATION.md  Dockerfile  FRONTEND_BACKEND_INTEGRATION.md  HEALTH_MONITORING_SUMMARY.md  MEMORY_INTEGRATION.md  METRICS_IMPLEMENTATION_SUMMARY.md  METRICS_README.md  README.md  REFS.md  TROUBLESHOOTING.md  compose.prod.yaml  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  test_health_monitoring.sh
.github/workflows/: docker-images.yml  ecr-images.yml  validate.yml
agents/: agno_assist.py  web_agent.py
agno-ui/: README.md  SIDEBAR_LAYOUT_UPDATE.md  UI_CONSISTENCY_CHECKLIST.md  UI_STYLE_GUIDE.md  package-lock.json  package.json  tailwind.config.ts
agno-ui/src/: store.ts
app/: dependencies.py  main.py  models.py
app/api/: __init__.py  health.py  knowledge.py  memory.py  metrics.py  models.py  references.py  skills.py
core/: __init__.py  hallucination_detector.py  memory_manager.py  metrics_collector.py  orchestrator.py  skills_config.yaml  validation_loop.py
core/loaders/: ref_loader.py  (+1 more)
docs/: DOCKER_FINAL_REPORT.md  DOCKER_QUICKREF.md  DOCKER_SUMMARY.md  HEALTH_MONITORING.md  HIERARCHICAL_CONFIG_GUIDE.md  IMPLEMENTATION.md  INTEGRATION_SUMMARY.md  LITELLM_INTEGRATION.md  LITELLM_QUICKSTART.md  LITELLM_SUMMARY.md  MEMORY_IMPLEMENTATION_SUMMARY.md  MEMORY_MANAGEMENT_UI.md  METRICS_AND_VALIDATION.md  METRICS_QUICKSTART.md  PROVIDER_CONFIG_GUIDE.md
scripts/: build_image.sh  create_skill.py  entrypoint.sh  init_db.sh  test_integration.sh  test_metrics_system.sh  validate_docker.sh
shared/: __init__.py  prompt.md
skills/: __init__.py
teams/: multilingual_team.py  reasoning_finance_team.py
tests/: test_api_advanced.py  test_litellm_integration.sh  test_memory_e2e.sh  test_memory_manager.py  test_skills.py  test_validation_loop.py
workflows/: investment_workflow.py  research_workflow.py
(+70 files in other folders)
